<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in_to_continue">sign in to continue</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="google_sign_in_field_msg" translatable="false">Google sign in failed, please retry again later.</string>
    <string name="generic_err_msg" translatable="false">Error please try again later.</string>
    <string name="create_an_new_account">create an new account</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="password_again">Password Again</string>
    <string name="have_an_account">have an account</string>
    <string name="sign_up">sign Up</string>
    <string name="forget_password_msg">enter your email to send email to update your password</string>

</resources>